--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                   Fan-Yun Sun, <strong>Shengguang Wu</strong>, Christian Jacobsen, Thomas Yim, Haoming Zou, Alex Zook, Shangru Li, Ethem Can, Xunlei Wu, Clemens Eppner, Valts Blukis, Jonathan Tremblay, Jiajun Wu, Stan Birchfield, Nick Haber
                 </div>
                 <div class="venue">
-                  <i><b>ArXiv</b></i>, 2025
+                  <i><b>TBA</b></i>, 2025
                 </div>
                 <div align="justify" class="tldr-text">
                   TL;DR: 3D-Generalist is a generative graphics framework to create 3D environments. Key modules include: 1. diffusion model to generate panoramic images that render the structures of 3D environments; 2. VLA trained via self-improving loop for code generation that refines the environments; 3. another VLA for placing diverse unlabled 3D assets. 3D-Generalist provides a controllabe pipeline to scale up synthetic 3D environment data for embodied AI.
