--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
               <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">
                 <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
               </a>
-              <!-- <a href="https://github.com/danielwusg"> -->
-              <a href="">
+              <a href="https://github.com/danielwusg">
                 <img src="images/icons/github.svg" alt="GitHub Icon">
+              </a>
+              <a href="https://x.com/ShengguangWu">
+                <img src="images/icons/twitter.svg" alt="Twitter Icon">
               </a>
               <!-- <a href="https://www.linkedin.com/in/shengguang-wu-41334627b"> -->
               <a href="">
