--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
               <heading>About me</heading>
               <br>
                 <p class="light">
-                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang</a> at <a href="https://saltlab.stanford.edu/">Stanford Social and Language Technologies (SALT) Lab</a>. 
-                  In the last quarter, I worked with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
+                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://suif.stanford.edu/~lam/">Monica Lam</a> at <a href="https://oval.cs.stanford.edu/">Stanford Open Virtual Assistant (OVAL) Lab</a>. 
+                  In the last quarters, I worked with <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang</a> at <a href="https://saltlab.stanford.edu/">Stanford Social and Language Technologies (SALT) Lab</a> and <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
                   <!-- Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>. -->
                   <!-- , affliated with <a href="https://nlp.stanford.edu/">Stanford NLP</a> and <a href="https://www.autonomousagents.stanford.edu/">Autonomous Agents Lab</a>. I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a>.  -->
                   <br>
