--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <strong>Shengguang Wu</strong>, Fan-Yun Sun, Kaiyue Wen, Nick Haber
                 </div>
                 <div class="venue">
-                  <i><b>ACL-Main</b></i>, 2025
+                  <i><b>ArXiv</b></i>, 2025
                 </div>
                 <div align="justify" class="tldr-text">
                   TL;DR: S-VCO is a novel finetuning method that enhances visual-centric capabilties of VLMs while preserving general performance. Key design is a symmetrical visual contrastive objective that optimizes over visual details while avoiding one-sided "preference" formulation. Across various VLM benchmark domains, S-VCO demonstrates most significant and consistent improvements, with especially strong gains on visually demanding tasks.
