add emnlp, add 2nd year

--- a/index.html
+++ b/index.html
@@ -96,54 +96,34 @@
               <heading>About me</heading>
               <br>
                 <p class="light">
-                  Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://suif.stanford.edu/~lam/">Monica Lam</a> at <a href="https://oval.cs.stanford.edu/">Stanford Open Virtual Assistant (OVAL) Lab</a>. 
-                  In the last quarters, I worked with <a href="https://cs.stanford.edu/~diyiy/">Diyi Yang</a> at <a href="https://saltlab.stanford.edu/">Stanford Social and Language Technologies (SALT) Lab</a> and <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>.
-                  <!-- Hi! My name is Shengguang (I also go by Daniel). I'm a first-year PhD student in Computer Science at Stanford University, currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a> at <a href="https://www.autonomousagents.stanford.edu/">Stanford Autonomous Agents Lab</a>. -->
-                  <!-- , affliated with <a href="https://nlp.stanford.edu/">Stanford NLP</a> and <a href="https://www.autonomousagents.stanford.edu/">Autonomous Agents Lab</a>. I'm currently rotating with <a href="https://www.autonomousagents.stanford.edu/people/">Nick Haber</a>.  -->
+                  Hi! My name is Shengguang (I also go by Daniel). I'm a second-year PhD student in Computer Science at Stanford University, advised by <a href="https://ai.stanford.edu/~syyeung/">Serena Yeung-Levy</a>.
                   <br>
                   I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?user=9f4JUrUAAAAJ&hl=en">Qi Su</a>. 
                   Previously, I also worked as a research intern with <a href="https://qwenlm.github.io/">Qwen Team</a>.
-                  <!-- and at <a href="https://www.bytedance.com/en/">ByteDance AI-Lab</a>. -->
-                  <!-- <br>   -->
-                  <!-- I received my Master's degree from Peking University, advised by <a href="https://scholar.google.com.hk/citations?hl=en&user=9f4JUrUAAAAJ/">Qi Su</a>.  -->
-                  <!-- <br>   -->
-                  <!-- Previously, I was a research intern at <a href="https://www.bytedance.com/en/">ByteDance AI-Lab NLP</a> and in <a href="https://qwenlm.github.io/">Qwen Team, Alibaba</a>. -->
                 </p>
-            </td>
-          </tr>
-          </table>
-          
-          <!-- <br> -->
-
-          <!-- Research Interests -->
-          <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
-            <tr>
-              <td width="100%" valign="middle">
-                <heading>Research Interests</heading>
+                <!-- Research Interests -->
                 <p>
-                  I am interested in developing human-like learning and reasoning skills in machines across domains and modalities. 
+                  I am interested in developing human-like learning and reasoning skills in machines across multi-modalities, with the goal of enabling useful real-world applications.
                   Currently, my work involves the following areas:
                 </p>
-                <div class="container">
-                  <img src="images/icons/learn3.svg" alt="Self Improvement Icon">
-                  <div class="text">
-                    <strong>Self-Improvement:</strong><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp; Enabling AI agents to learn from interactions and <strong>continually self-improve</strong> — actively adapting to new information and novel tasks.
-                  </div>
-                </div>
-                <br>
                 <div class="container">
                   <img src="images/icons/vision.svg" alt="Multimodal Grounding Icon">
                   <div class="text">
                     <strong>Multimodal Grounding & Reasoning:</strong><br>
-                    &nbsp;&nbsp;&nbsp;&nbsp; Harnessing textual feedback to guide fine-grainded visual perception, and drawing from visual insights to optimize language-based reasoning.
+                    &nbsp;&nbsp;&nbsp;&nbsp; Drawing from visual insights to optimize language-based reasoning, and infusing textual feedback to guide fine-grainded visual perception.
                   </div>
                 </div>
                 <br>
-              </td>
-            </tr>
+                <div class="container">
+                  <img src="images/icons/learn3.svg" alt="Self Improvement Icon">
+                  <div class="text">
+                    <strong>Self-Improvement:</strong><br>
+                    &nbsp;&nbsp;&nbsp;&nbsp; Enabling AI agents to learn from interactions and <strong>continually self-improve</strong> — actively adapting to new information and evolving with novel tasks.
+                  </div>
+                </div>
+            </td>
+          </tr>
           </table>
-
           <!-- Publications & Manuscripts -->
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" id="shortList">
             <tr>
@@ -153,15 +133,36 @@
               <td width="70%" valign="right">
                 <div align="right">
                   (see also <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">Google Scholar</a>)
-                  <!-- <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">Full List of Publications</a> -->
                 </div>
               </td>
             </tr>
             <tr>
               <td width="30%">
-                <video width="220" autoplay muted>
+                <img src="images/socrates.png" width=250px>
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://stanfordhci.github.io/socrates/"><b>Finetuning LLMs for Human Behavior Prediction in Social Science Experiments</b></a>
+                </div>
+                <div class="authors">
+                  Akaash Kolluri, <strong>Shengguang Wu</strong>, Joon Sung Park, Michael S. Bernstein
+                </div>
+                <div class="venue">
+                  <i><b>EMNLP-Main</b></i>, 2025
+                </div>
+                <div align="justify" class="tldr-text">
+                  TL;DR: We release SocSci210, a dataset of 2.9 million responses from 400,491 participants across 210 social science experiments. Through finetuning, our Socrates models achieve substantially better alignment with human response distributions under varying experimental conditions. We show that finetuning on just a subset of conditions within a study enables robust generalization to unseen conditions, demonstrating the potential for accurate experimental hypothesis screening with limited sample data.
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td width="30%">
+                <video width="260" autoplay muted loop>
                   <source src="images/3dgen.mp4" type="video/mp4">
-                </video>                
+                </video>
+                <div style="text-align: center; font-size: 16px; margin-top: 5px; color: #666; font-style: italic;">
+                  "An international restaurant with vibrant decor."
+                </div>
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
@@ -174,7 +175,7 @@
                   <i><b>TBA</b></i>, 2025
                 </div>
                 <div align="justify" class="tldr-text">
-                  TL;DR: 3D-Generalist is a generative graphics framework to create 3D environments. Key modules include: 1. diffusion model to generate panoramic images that render the structures of 3D environments; 2. VLA trained via self-improving loop for code generation that refines the environments; 3. another VLA for placing diverse unlabled 3D assets. 3D-Generalist provides a controllabe pipeline to scale up synthetic 3D environment data for embodied AI.
+                  TL;DR: 3D-Generalist is a generative graphics framework for creating 3D environments. Key modules include: 1. a diffusion-based panoramic generator that renders environment structures; 2. a VLA trained via self-improving loop for code generation to refine the environments; and 3. another VLA for placing diverse unlabeled 3D assets. 3D-Generalist provides a controllable pipeline to scale up synthetic 3D environment data for embodied AI.
                 </div>
               </td>
             </tr>
@@ -184,10 +185,10 @@
               </td>
               <td width="70%" valign="middle">
                 <div class="title">
-                  <a href="https://arxiv.org/pdf/2502.13928"><b>Symmetrical Visual Contrastive Optimization: Aligning Vision-Language Models with Minimal Contrastive Images</b></a>
+                  <a href="https://s-vco.github.io/"><b>Symmetrical Visual Contrastive Optimization: Aligning Vision-Language Models with Minimal Contrastive Images</b></a>
                 </div>
                 <div class="authors">
-                    <strong>Shengguang Wu</strong>, Fan-Yun Sun, Kaiyue Wen, Nick Haber
+                  <strong>Shengguang Wu</strong>, Fan-Yun Sun, Kaiyue Wen, Nick Haber
                 </div>
                 <div class="venue">
                   <i><b>ACL-Main</b></i>, 2025
