add emnlp, add 2nd year

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               </a>
             </td>
             <td width="45%">
-              <img src="images/meinparis.jpg" width="100%">
+              <img src="images/photo.jpg" width="100%">
             </td>
           </tr>
           </table>
@@ -205,7 +205,6 @@
               <td width="70%" valign="middle">
                 <div class="title">
                   <a href="https://aclanthology.org/2024.emnlp-main.1258.pdf"><b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b></a>
-                  <!-- <b>Rethinking Pragmatics in Large Language Models: Towards Open-Ended Evaluation and Preference Tuning</b> -->
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Shusheng Yang, Zhenglun Chen, Qi Su
@@ -225,19 +224,12 @@
               <td width="70%" valign="middle">
                 <div class="title">
                   <a href="https://arxiv.org/pdf/2311.08182.pdf"><b>DiverseEvol: Self-Evolved Diverse Data Sampling for Efficient Instruction Tuning</b></a>
-                  <!-- <a href="papers/diverseevol.pdf"><b>DiverseEvol: Self-Evolved Diverse Data Sampling for Efficient Instruction Tuning</b></a> -->
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Keming Lu, Benfeng Xu, Junyang Lin, Qi Su, Chang Zhou
                 </div>
                 <div class="venue">
                   <i><b>ArXiv</b></i>, 2023
-                </div>
-                <!-- <div class="tags">
-                  <a href="https://arxiv.org/abs/2311.08182">arxiv</a> /
-                  <a href="https://github.com/OFA-Sys/DiverseEvol">code</a> 
-                  <a href="bib/.bib">bibtex</a> -->
-                <!-- </div> -->
                 <div align="justify" class="tldr-text">
                   TL;DR: <span class="small-caps">DiverseEvol</span> is an efficient instruction-tuning method that allows the model itself to iteratively sample training subsets to improve its own performance, with a key selection principle of maintaining high diversity in the chosen subsets. Across three datasets and benchmarks, our models, trained on less than 4% of the original dataset, match or improve performance compared with finetuning on full data.
                 </div>
@@ -250,7 +242,6 @@
               <td width="70%" valign="middle">
                 <div class="title">
                   <a href="https://arxiv.org/pdf/2309.16609.pdf"><b>Qwen Technical Report</b></a>
-                  <!-- <a href="papers/qwen.pdf"><b>Qwen Technical Report</b></a> -->
                 </div>
                 <div class="authors">
                     <strong>Qwen Team</strong>
@@ -258,11 +249,6 @@
                 <div class="venue">
                    <i><b>ArXiv</b></i>, 2023
                 </div>
-                <!-- <div class="tags">
-                  <a href="https://arxiv.org/abs/2309.16609">arxiv</a> /
-                  <a href="https://github.com/QwenLM/Qwen">code</a>
-                  <!-- <a href="bib/">bibtex</a> -->
-                <!-- </div> -->
                 <div align="justify" class="tldr-text">
                   TL;DR: We release <span class="small-caps">Qwen</span>, a family of highly-capabale foundation LLMs and Chat-Models. QwenLMs achieve superior performance than baselines (e.g., LLaMA2) of similar sizes on a wide range of benchmarks that measure natural language understanding, reasoning, problem solving, etc. Qwen-72B also outperforms GPT-3.5 on 70% of all tasks.
                 </div>
@@ -275,19 +261,13 @@
               <td width="70%" valign="middle">
                 <div class="title">
                   <a href="https://arxiv.org/pdf/2312.08056.pdf"><b>Knowledge-Aware Artifact Image Synthesis with LLM-Enhanced Prompting and Multi-Source Supervision</b></a>
-                  <!-- <a href="papers/artifact.pdf"><b>Knowledge-Aware Artifact Image Synthesis with LLM-Enhanced Prompting and Multi-Source Supervision</b></a> -->
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Zhenglun Chen, Qi Su
                 </div>
                 <div class="venue">
                   <i><b>ACM-MM</b></i>, 2024
-                  <!-- <i>Under Review at <b>ECCV</b></i>, 2024 -->
                 </div>
-                <!-- <div class="tags"> -->
-                  <!-- <a href="https://arxiv.org/abs/2312.08056">arxiv</a> / -->
-                  <!-- <a href="https://github.com/danielwusg/artifact_diffusion">code</a> -->
-                <!-- </div> -->
                 <div align="justify" class="tldr-text">
                   TL;DR: We present an artifact recovery model that accurately generates images of lost artifacts adhering to historical knowledge. Key designs include: 1. prompt enhancement with archaeological knowledge elicited from LLMs; 2. contrastive learning for textual guidance on correlated historical expertise; 3. visual-semantic constraints on edge and perceptual features for learning intricate visual details.
                 </div>
@@ -300,7 +280,6 @@
               <td width="70%" valign="middle">
                 <div class="title">
                   <a href="https://arxiv.org/pdf/2312.07066.pdf"><b>DiffuVST: Narrating Fictional Scenes with Global-History-Guided Denoising Models</b></a>
-                  <!-- <a href="papers/diffuvst.pdf"><b>DiffuVST: Narrating Fictional Scenes with Global-History-Guided Denoising Models</b></a> -->
                 </div>
                 <div class="authors">
                     <strong>Shengguang Wu</strong>, Mei Yuan, Qi Su
@@ -308,11 +287,6 @@
                 <div class="venue">
                    <i><b>EMNLP-Findings</b></i>, 2023
                 </div>
-                <!-- <div class="tags"> -->
-                  <!-- <a href="https://arxiv.org/abs/2312.07066">arxiv</a> -->
-                  <!--<a href="">code</a>-->
-                  <!-- <a href="bib/">bibtex</a> -->
-                <!-- </div> -->
                 <div align="justify" class="tldr-text">
                   TL;DR:  We introduced a novel non-autoregressive approach to visual storytelling, <span class="small-caps">DiffuVST</span>, which is a diffusion-based LM featuring bidirectional context guidance and multimodal adapters. It directly predicts ground-truth text embeddings from any noisy input, achieving superior performance across NLG metrics at a massively faster inference speed compared to strong autoregressive baselines.
                 </div>
@@ -462,7 +436,6 @@
         </td>
       </tr>
     </table>
-  <!-- <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=100"></script> -->
   <div style="display:none;">
     <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hia7jEgmSIlj13HiQ3nV_z3fbdB4PK41gwbICeSTxjo&cl=ffffff&w=100"></script>
   </div>
