--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <name>Shengguang Wu</name><br>
               Ph.D. Student, Computer Science, Stanford University<br>
               Email: shgwu [AT] cs [DOT] stanford [DOT] edu<br><br>
-              <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">
+              <a href="https://scholar.google.com/citations?hl=en&user=QZmepnEAAAAJ&view_op=list_works&sortby=pubdate">
                 <img src="images/icons/google-scholar.svg" alt="Google Scholar Icon">
               </a>
               <a href="https://github.com/danielwusg">
@@ -132,7 +132,26 @@
               </td>
               <td width="70%" valign="right">
                 <div align="right">
-                  (see also <a href="https://scholar.google.com/citations?user=QZmepnEAAAAJ&hl=en">Google Scholar</a>)
+                  (see also <a href="https://scholar.google.com/citations?hl=en&user=QZmepnEAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>)
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td width="30%">
+                <img src="images/tvp.png" width=250px>
+              </td>
+              <td width="70%" valign="middle">
+                <div class="title">
+                  <a href="https://transductive-visualprogram.github.io/"><b>Transductive Visual Programming (TVP): Evolving Tool Libraries from Experience for Spatial Reasoning</b></a>
+                </div>
+                <div class="authors">
+                  <strong>Shengguang Wu</strong>, Xiaohan Wang, Yuhui Zhang, Hao Zhu, Serena Yeung-Levy
+                </div>
+                <div class="venue">
+                  <i><b>ArXiv</b></i>, 2025
+                </div>
+                <div align="justify" class="tldr-text">
+                  TL;DR: TVP is a new visual programming framework that builds reusable tools from its own problem-solving experience via two interconnected libraries: an Example Library that accumulates program solutions as experience, and a Tool Library that maintains functions abstracted from these programs. The dual-libraries enable the circular program-tool-program cycle: solving problems generates experience, experience guides tool creation, and newly created tools improve future problem-solving.
                 </div>
               </td>
             </tr>
@@ -172,7 +191,7 @@
                   Fan-Yun Sun, <strong>Shengguang Wu</strong>, Christian Jacobsen, Thomas Yim, Haoming Zou, Alex Zook, Shangru Li, Ethem Can, Xunlei Wu, Clemens Eppner, Valts Blukis, Jonathan Tremblay, Jiajun Wu, Stan Birchfield, Nick Haber
                 </div>
                 <div class="venue">
-                  <i><b>TBA</b></i>, 2025
+                  <i><b>3DV</b></i>, 2026
                 </div>
                 <div align="justify" class="tldr-text">
                   TL;DR: 3D-Generalist is a generative graphics framework for creating 3D environments. Key modules include: 1. a diffusion-based panoramic generator that renders environment structures; 2. a VLA trained via self-improving loop for code generation to refine the environments; and 3. another VLA for placing diverse unlabeled 3D assets. 3D-Generalist provides a controllable pipeline to scale up synthetic 3D environment data for embodied AI.
